--- a/Employee.html
+++ b/Employee.html
@@ -82,7 +82,7 @@
                 <label for="input18">Mother's Occupation:</label>
                 <input type="text" id="input18">
 
-                <label for="emergency">Emergency Contact</label>
+                <label for="emergency">Emergency Contact (Name & Phone Number)</label>
                 <input type="text" id="emergency">
 
                 <label for="photo">Please Upload 2x2 Picture</label>
